Added node packages and the first Backbone View

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Xsy-O-Matic</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <script src="node_modules/requirejs/require.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <div class="xsy-o-matic">Loading</div>
